--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -44,3 +44,9 @@ body {
     text-align: center;
     font-size: 20px;
 }
+
+@media screen and (max-width: 720px) {
+    .maindiv {
+        width: 100%;
+    }
+}
