--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,13 +1,21 @@
 .calcButton {
     /*width: 70px;*/
     height: 80px;
+    line-height: 80px;
     margin: 5px;
     font-size: 30px;
+    text-align: center;
+    border: 1px SOLID GRAY;
+    background-color: #e6e6e6;
+}
+
+a.calcButton {
+    text-decoration: none;
+    color: inherit;
 }
 
 .btnfunc {
     background-color: ORANGE;
-    border: 1px solid gray;
 }
 .btnAC {
     background-color: RED;
@@ -46,6 +54,7 @@
 body {
     text-align: center;
     font-size: 20px;
+    font-family: Arial;
 }
 
 #buttonsDiv {
