--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -11,7 +11,7 @@
 
 a.calcButton {
     text-decoration: none;
-    color: inherit;
+    color: black;
 }
 
 .btnfunc {
@@ -19,6 +19,8 @@ a.calcButton {
 }
 .btnAC {
     background-color: RED;
+}
+a.btnAC {
     color: WHITE;
 }
 .logLine {
@@ -54,7 +56,7 @@ a.calcButton {
 body {
     text-align: center;
     font-size: 20px;
-    font-family: Arial;
+    font-family: Arial, serif;
 }
 
 #buttonsDiv {
