--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,9 +1,8 @@
 .calcButton {
-    /*width: 70px;*/
-    height: 80px;
-    line-height: 80px;
+    height: 2.5em;
+    line-height: 2.5em;
     margin: 5px;
-    font-size: 30px;
+    font-size: 1.5em;
     text-align: center;
     border: 1px SOLID GRAY;
     background-color: #e6e6e6;
@@ -42,7 +41,7 @@ a.btnAC {
     resize: none;
     padding: 0;
     margin: 0;
-    font-size: 40px;
+    font-size: 2.6em;
 }
 #resultDiv textarea, #resultDiv textarea:focus {
     border: 0;
@@ -55,7 +54,7 @@ a.btnAC {
 }
 body {
     text-align: center;
-    font-size: 20px;
+    font-size: 1.2em;
     font-family: Arial, serif;
 }
 
@@ -65,11 +64,19 @@ body {
 }
 
 #expressionDiv {
-    height: 30px;
+    height: 1.2em;
+}
+
+h2 {
+	margin: 10px 0;
 }
 
 @media screen and (max-width: 720px) {
     .maindiv {
         width: 100%;
+    }
+
+    .calcButton {
+        font-size: 1em;
     }
 }
