--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -93,6 +93,11 @@ h3 {
     text-align: center;
 }
 
+.footerSlot {
+    text-align: center;
+    margin: 30px 0 10px;
+}
+
 @media screen and (min-width: 1020px) {
     .maindiv {
         width: 100%;
