Making button border round

--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -5,6 +5,7 @@
     font-size: 1.5em;
     text-align: center;
     border: 1px SOLID GRAY;
+    border-radius: 10px;
     background-color: #e6e6e6;
 }
 
