Button color changes

--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -19,10 +19,10 @@ a.calcButton {
 }
 
 .btnfunc {
-    background-color: ORANGE;
+    background-color: #ffd993;
 }
 .btnAC {
-    background-color: RED;
+    background-color: #ff4646;
 }
 a.btnAC {
     color: WHITE;
