--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -123,8 +123,11 @@ h3 {
     .calcButton {
         font-size: 1em;
     }
-    .historyHeader a {
+    .historyHeader h3 {
         display: block;
+    }
+    .historyHeader a {
+        display: inline-block;
         margin-bottom: 10px;
     }
 }
@@ -159,8 +162,11 @@ h3 {
         width: 45%;
         display: inline-block;
     }
-    .historyHeader a {
+    .historyHeader h3 {
         display: block;
+    }
+    .historyHeader a {
+        display: inline-block;
         margin-bottom: 10px;
     }
 }
