--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -1,3 +1,11 @@
+a:link, a:visited {
+    color: #15C;
+    text-decoration: none;
+}
+a:hover {
+    color: #9B2D2D;
+    text-decoration: underline;
+}
 .calcButton {
     height: 2.5em;
     line-height: 2.5em;
@@ -62,9 +70,11 @@ a.btnAC {
 }
 body {
     font-size: 1.2em;
-    font-family: Arial, serif;
     margin: 0;
     padding: 10px;
+}
+body, textarea {
+    font-family: Arial, serif;
 }
 
 #buttonsContainer {
@@ -101,6 +111,9 @@ h3 {
 .footerSlot {
     text-align: center;
     margin: 30px 0 10px;
+}
+.footerSlot div {
+    margin-bottom: 15px;
 }
 
 @media screen and (min-width: 1020px) {
