Converting from a to span

--- a/res/stylesheet.css
+++ b/res/stylesheet.css
@@ -136,8 +136,9 @@ h3 {
     vertical-align: middle;
 }
 
-.historyHeader > a > img {
+.historyHeader > span > img {
     height: 30px;
+    cursor: pointer;
 }
 
 #centerContainer {
